アバター画像が消えてしまったので直した

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -13,7 +13,7 @@
   </div>
   <%= form_tag '/home',{controller: 'profile',method:'set_record'} do |f| %>
 
-    <input type="image" id="profile" class="profile_button" ontouchstart="" src="<%= @icon %>" >
+    <input type="image" id="profile" class="profile_button" ontouchstart="" src="<%= @current_profile.get_avatar %>" >
 
   <% end %> 
   
