cssが競合してしまっている問題を解消

--- a/app/views/memo/show.html.erb
+++ b/app/views/memo/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h1>みんなのメモ</h1>
+<h1 class="title">みんなのメモ</h1>
 
 <% @records.each do |record| %>
     <% @users.each do |user| %>
