--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,6 +1,5 @@
 h1.title {
   width: 250px;
-  height: 30px;
   font-family: HiraKakuProN-W6;
   font-size: 30px;
   font-weight: normal;
@@ -10,6 +9,7 @@ h1.title {
   letter-spacing: normal;
   text-align: left;
   color: #707070;
+  margin: 15px;
 }
 
 .avatar,
