--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,7 +21,20 @@
         <%= i.text_field :goal, class: 'form-control', placeholder: "目標" %>
 
         <%= i.text_field :daily_task, class: 'form-control', placeholder: "やること" %>
+
       </div>
+      <% end %>
+
+      <div class="tag_field"><%= f.fields_for :tag do |t| %>
+       
+        <div style="text-align: left; margin: 4px"> タグ</div>
+  
+        <%= t.collection_select :tag, Kind.all, :tag_name, :tag_name, include_blank: true %>
+        <!-- <%= t.collection_select :tag, Kind.all, :tag_name, :tag_name, include_blank: true %> -->
+        <!-- <%= t.collection_select :tag, Kind.all, :tag_name, :tag_name, include_blank: true %> -->
+
+      </div>
+      
       <% end %>
 
       <%= f.submit "登録", class: "btn btn-create" %>
