余白を調節

--- a/app/views/memo/new.html.erb
+++ b/app/views/memo/new.html.erb
@@ -1,7 +1,9 @@
 <% provide(:title, 'memos') %>
-<h1 class="title">メモ入力フォーム</h1>
-<%= form_for (:memos),{controller: 'memo',method:'create'} do |f| %>
-      <%= f.text_area :memo, class: 'form-control', placeholder: "memo" %>
-      <%= f.hidden_field :record_id, :value => @record_id %>
-      <%= f.submit "メモを作成", class: "btn btn-create" %>
-<% end %>
+<div class="container">
+  <h1 class="title">メモ入力フォーム</h1>
+  <%= form_for (:memos),{controller: 'memo',method:'create'} do |f| %>
+    <%= f.text_area :memo, class: 'form-control', placeholder: "memo" %>
+    <%= f.hidden_field :record_id, :value => @record_id %>
+    <%= f.submit "メモを作成", class: "btn btn-create" %>
+  <% end %>
+</div>
