--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -3,6 +3,7 @@
 </head>
 
 <body>
+<div class="container">
 <h1 class="title">プロフィール</h1>
 
 <div class="avatar">
@@ -51,12 +52,9 @@
 
  <!--<%= link_to 'Ranking', '/ranking/show' %> -->
 
- <div id="calendar"></div>
-  <div style='text-align: center; margin: 20px auto 50px;'><%= link_to '詳しく見る', '/record' %></div>
+<div id="calendar"></div>
+<div style='text-align: center; margin: 20px auto 50px;'><%= link_to '詳しく見る', '/record' %></div>
 
-  </body>
 
-<style>
-  
-</style>
-
+</div>
+</body>
