--- a/app/views/layouts/contents.html.erb
+++ b/app/views/layouts/contents.html.erb
@@ -22,10 +22,10 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="navbar-nav">
             <!-- <li class="active"><a href="#">Home</a></li> -->
-            <li class="nav-item"><a class="nav-link" href="/home">プロフィール</a></li>
-            <li class="nav-item"><a class="nav-link" href="/record">あなたの記録</a></li>
-            <li class="nav-item"><a class="nav-link" href="/memo">みんなの記録</a></li>
-            <li class="nav-item"><a class="nav-link" href="/rank">ランキング</a></li>
+            <li class="nav-item <%= request.path == '/home' ? 'active' : ''%>"><a class="nav-link" href="/home">プロフィール</a></li>
+            <li class="nav-item <%= request.path == '/record' ? 'active' : ''%>"><a class="nav-link" href="/record">あなたの記録</a></li>
+            <li class="nav-item <%= request.path == '/memo' ? 'active' : ''%>"><a class="nav-link" href="/memo">みんなの記録</a></li>
+            <li class="nav-item <%= request.path == '/rank' ? 'active' : ''%>"><a class="nav-link" href="/rank">ランキング</a></li>
             <li class="nav-item"><a class="nav-link" href="/logout">ログアウト</a></li>
 
           </ul>
