--- a/app/views/ranking/show.html.erb
+++ b/app/views/ranking/show.html.erb
@@ -1,16 +1,12 @@
 <div class="container">
   <h1 class="title">ランキング</h1>
 
-  ログインユーザ情報:
-  <%= @myId %>
-  <%= @myName %>
-  <%= @myScore %>
-  <%= @tags %>
+  
+  <%= @myName %>さんのスコアは<%= @myScore %>です
   <br>
-  <% for ar_my_tag in @ar_my_tags do %>
-    <%= ar_my_tag.tag %>
-  <% end %>
-
+    順位は<%= @rank %>位です
+  <br>
+  
   <div class="tag-buttons">
     <% @tags.each do |tag| %>
       <div class="tag-button" data-is-selected="<%= @selected_tags.include?(tag) %>" data-tag-name="<%= tag %>"><%= tag %></div>
