タイトルの下に薄い線を追加

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -4,7 +4,7 @@
 
 <body>
 <div class="container">
-<h1 class="title">プロフィール</h1>
+<h1 class="title">プロフィール</h1><hr>
 
 <div class="avatar">
   <div class="balloon">
