--- a/app/views/record/show.html.erb
+++ b/app/views/record/show.html.erb
@@ -6,7 +6,7 @@
 
 <div class="container">
 
-<h1 class="title">あなたの記録</h1>
+<h1 class="title">あなたの記録</h1><hr>
 <div id="calendar"></div>
 
 <% @records.each do |record| %>
