--- a/app/views/memo/new.html.erb
+++ b/app/views/memo/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'memos') %>
 <div class="container">
-  <h1 class="title">メモ入力フォーム</h1>
+  <h1 class="title">メモ入力フォーム</h1><hr>
   <%= form_for (:memos),{controller: 'memo',method:'create'} do |f| %>
     <%= f.text_area :memo, class: 'form-control', placeholder: "memo" %>
     <%= f.hidden_field :record_id, :value => @record_id %>
