--- a/app/views/memo/show.html.erb
+++ b/app/views/memo/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h1 class="title">みんなのメモ</h1>
+<h1 class="title">みんなのメモ</h1><hr>
 
 <% @records.each do |record| %>
     <% @users.each do |user| %>
