--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Edit user") %>
-<h1>目標・やることの設定</h1>
+<h1 class="title">目標・やることの設定</h1><hr>
 
 <div class="row">
   <div class="Edit_form">
