--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -5,7 +5,7 @@
 <body>
 <div class="container">
 <h1 class="title">プロフィール</h1>
-
+<%=flash[:link_error]%>
 <div class="avatar">
   <div class="balloon">
   <%= flash[:success] %>
