--- a/app/views/ranking/show.html.erb
+++ b/app/views/ranking/show.html.erb
@@ -13,7 +13,7 @@
   </div>
 
   <% @users.each_with_index do |user, rank| %>
-    <div class="profile-card">
+    <div class="profile-card <%= @rank == (rank + 1) ? 'my-profile-card' : '' %>">
       <div class="profile-card-rank">
         <%= rank + 1 %><!-- 配列のインデックスがランキングの順位に対応 -->
       </div>
