自分のランキングを確認しやすくするためのstyleを追加

--- a/app/views/ranking/show.html.erb
+++ b/app/views/ranking/show.html.erb
@@ -27,6 +27,7 @@
 </div>
 
 <style>
+
   .profile-card {
     border: gray solid 1px;
     border-radius: 6px;
@@ -36,6 +37,14 @@
     margin: 8px 0;
     padding: 8px;
     width: 100%;
+  }
+
+  .my-profile-card {
+    border-color: #00f;
+  }
+
+  .my-profile-card .profile-card-rank {
+    box-shadow: 0 0 5px 4px #3f5fff;
   }
 
   .profile-card > * {
