--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -12,6 +12,19 @@ h1.title {
   margin: 15px;
 }
 
+h3.title{
+  font-family: HiraKakuProN-W6;
+  font-size: 30px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.7;
+  letter-spacing: normal;
+  text-align: center;
+  color: #707070;
+  margin: 15px;
+}
+
 .avatar,
 .goalandtask {
   width: 350px;
