--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -50,7 +50,7 @@
 </div>
 
  <!--<%= link_to 'Ranking', '/ranking/show' %> -->
-
+<h3 class="title">あなたの記録</h3>
  <div id="calendar"></div>
   <div style='text-align: center; margin: 20px auto 50px;'><%= link_to '詳しく見る', '/record' %></div>
 
