--- a/app/views/ranking/show.html.erb
+++ b/app/views/ranking/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="title">ランキング</h1>
+  <h1 class="title">ランキング</h1><hr>
   
   <%= @myName %>さんのスコアは<%= @myScore %>です
   <br>
