目標・やること編集画面の左右に余白を挿入

--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, "Edit user") %>
+<div class="container">
 <h1 class="title">目標・やることの設定</h1><hr>
 
 <div class="row">
@@ -9,6 +10,7 @@
       <%= f.submit "保存", class: "btn btn-login" %>
     <% end %>
   </div>
+</div>
 </div>
 
 <style>
