--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,17 +27,17 @@
       <div style="text-align: left; margin: 4px"> タグ</div>
 
       <div class="tag_field"><%= f.fields_for :tag do |t| %>
-        <%= t.collection_select :tag, Kind.all, :tag_name, :tag_name, include_blank: true %>
+        <%= t.collection_select :tag, Kind.all, :tag_name, :tag_name %>
       </div>
       <% end %>
 
       <div class="tag_field"><%= f.fields_for :tag do |u| %>
-        <%= u.collection_select :tag, Kind.all, :tag_name, :tag_name, include_blank: true %>
+        <%= u.collection_select :tag, Kind.all, :tag_name, :tag_name %>
       </div>
       <% end %>
 
       <div class="tag_field"><%= f.fields_for :tag do |v| %>
-        <%= v.collection_select :tag, Kind.all, :tag_name, :tag_name, include_blank: true %>
+        <%= v.collection_select :tag, Kind.all, :tag_name, :tag_name %>
       </div>
       <% end %>
 
