スマホ表示のランキング画面・みんなのメモ画面でアバターアイコンを縮めない

--- a/app/assets/stylesheets/record.scss
+++ b/app/assets/stylesheets/record.scss
@@ -52,6 +52,7 @@ div#calendar{
     border: gray solid 1px;
     width: 100px;
     height: 100px;
+    flex-shrink: 0;
   }
   
   .profile-card-main {
