--- a/app/views/memo/show.html.erb
+++ b/app/views/memo/show.html.erb
@@ -2,7 +2,7 @@
 <h1 class="title">みんなのメモ</h1><hr>
 <div class="tag-buttons">
     <% @tags.each do |tag| %>
-      <div class="tag-button" data-is-selected="<%= @selected_tags.include?(tag) %>" data-tag-name="<%= tag %>"><%= tag.tag %></div>
+      <div class="tag-button" data-is-selected="<%= @selected_tags.include?(tag) %>" data-tag-name="<%= tag %>"><%= tag %></div>
     <% end %>
 </div>
 <% @records.each do |record| %>
