タグを外したときに全表示するように

--- a/app/views/memo/show.html.erb
+++ b/app/views/memo/show.html.erb
@@ -6,6 +6,36 @@
     <% end %>
 </div>
 <% @records.each do |record| %>
+    <% if @tag_users.empty? %>
+    <% @users.each do |user| %>
+        <% if user.id == record.user_id %>
+            <% @profiles.each do |profile| %>
+            <% if user.id == profile.user_id %>
+            <div class="profile-card">
+            <img src="<%= profile.get_avatar %>" width=80px>
+            <div class="profile-card-main">
+                <div class="profile-card-user-name"><%= user[:name] %></div>
+                <div class="profile-card-date"><%= record.created_at %>
+                </div>
+                <% @memos.each do |memo| %>
+                    <% if memo.record_id == record.id %>
+                <div class="memo-content"><p>メモ : <%= memo.memo %></div>
+                <!-- 未実装 <div class="memo-like"><%= memo.like_count%>ファボ</div> -->
+                <%end%>
+                <%end%>
+            </div>
+            
+            <div class="profile-card-task">
+                <div class="profile-card-daily-task"><%= profile[:daily_task] %></div>
+            </div>            
+
+            </div>
+
+            <%end%>
+        <%end%>
+        <%end%>
+    <%end%> 
+    <% else %>
     <% @tag_users.each do |user| %>
         <% if user.id == record.user_id %>
             <% @profiles.each do |profile| %>
@@ -32,6 +62,7 @@
             <%end%>
         <%end%>
         <%end%>
+    <%end%> 
     <%end%>  
 <%end%>
 </div>
