--- a/app/views/ranking/show.html.erb
+++ b/app/views/ranking/show.html.erb
@@ -1,11 +1,16 @@
 <div class="container">
   <h1 class="title">ランキング</h1><hr>
-  
+  <% if @users.empty? %>
+    <%= @myName %>さんのスコアは<%= @myScore %>です
+    <br>
+      タグを少なくとも一つは設定してください
+    <br>
+  <% else %>
   <%= @myName %>さんのスコアは<%= @myScore %>です
   <br>
     順位は<%= @rank %>位です
   <br>
-  
+  <% end %>
   <div class="tag-buttons">
     <% @tags.each do |tag| %>
       <div class="tag-button" data-is-selected="<%= @selected_tags.include?(tag) %>" data-tag-name="<%= tag %>"><%= tag %></div>
@@ -102,7 +107,6 @@
 <script>
 const tags = new Set(<%= @tags.to_json.html_safe %>);
 const selectedTags = new Set(<%= @selected_tags.to_json.html_safe %>);
-
 const excludedTags = new Set();
 for (const tag of tags) {
   if (!selectedTags.has(tag)) {
@@ -123,7 +127,7 @@ for (const tagButton of document.getElementsByClassName('tag-button')) {
 
     const newSearch = '?' + [...newExcludedTags].map(
       (tag, index) => `exclude[${index}]=${tag}`
-    ).join('&');
+    ).join('&')
 
     location.href = location.origin + location.pathname + newSearch;
   });
