--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -8,7 +8,7 @@
 <%=flash[:link_error]%>
 <div class="avatar">
   <div class="balloon">
-  <%= flash[:success] %>
+  <%= flash[:success].to_s.html_safe %>
   
   <%= flash.discard(:notice)%>
   </div>
